--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hotwired/turbo-rails": "^8.0.13",
     "@rails/request.js": "^0.0.12",
     "@tailwindcss/cli": "^4.1.7",
+    "chart.js": "^4.4.9",
     "daisyui": "^5.0.37",
     "postcss": "^8.5.3",
     "simple-mask-money": "^4.1.4",
